# resustack-ai

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  pr-check.yml  security.yml
backend/: __init__.py  main.py
backend/ai/: __init__.py  config.py
backend/ai/chains/: __init__.py  llm.py  review_chain.py
backend/ai/models/: __init__.py  resume_evaluate_input.py  resume_evaluate_output.py
backend/ai/output/: __init__.py  review_result.py
backend/ai/prompts/: __init__.py  block.py  full_resume.py  introduction.py  section.py  skill.py
backend/ai/prompts/templates/: base.yaml  full_resume.yaml  introduction.yaml  section.yaml  skill.yaml
backend/ai/strategies/: __init__.py  base.py  factory.py
backend/api/: __init__.py
backend/api/rest/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
backend/api/rest/middleware/: __init__.py  logging.py  rate_limit.py
backend/api/rest/v1/: __init__.py  mapper.py
backend/api/rest/v1/models/: __init__.py  resumes.py
backend/api/rest/v1/routes/: resumes.py  reviews.py
backend/api/rest/v1/schemas/: resumes.py  reviews.py
backend/domain/resume/: __init__.py  enums.py  models.py
backend/services/: __init__.py  dependency.py  resume_service.py
backend/services/review/: __init__.py  assembler.py  context.py  enums.py  mapper.py  service.py
backend/utils/: enums.py  schema_base.py  yaml_loader.py
src/app/: main.py
src/core/: config.py  security.py
tests/: README.md  conftest.py  test_main.py  test_rate_limit.py
tests/ai/: test_strategy_factory.py
tests/api/: test_review_endpoints.py
tests/domain/: test_resume_models.py  test_resume_models_improved.py
tests/integration/: test_review_flow.py
tests/services/: test_assembler.py  test_mapper.py  test_review_service.py
tests/utils/: test_yaml_loader.py
